<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="ru">
    <string name="app_name">Расписание АГЗ</string>
    <string name="name_param_is_null">Группа не выбрана</string>

    <dimen name="gant_period_width">100dp</dimen>
    <dimen name="gant_row_height">48dp</dimen>
    <dimen name="gant_separator_width">1dp</dimen>
    <dimen name="gant_task_corner_radius">8dp</dimen>
    <dimen name="gant_task_vertical_margin">4dp</dimen>
    <dimen name="gant_task_text_horizontal_margin">4dp</dimen>

    <dimen name="lesson_name_text_size">9sp</dimen>
    <dimen name="lesson_info_text_size">8sp</dimen>

    <dimen name="name_text_size">8sp</dimen>
    <dimen name="info_text_size">7sp</dimen>

    <dimen name="card_time_text_size">20dp</dimen>
    <dimen name="card_time_text_size_2">17dp</dimen>
    //отступы для View в one_lesson_card
    <dimen name="margine_all">5dp</dimen>
    //радиус скругления
    <dimen name="radius_card">8dp</dimen>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="BTB_tmenu_tt">Расписание</string>
    <string name="agz_text_button">Нажмите, чтобы перейти на страничку сайт приложения</string>
    <string name="my_tg_text_button">Возникили ошибки в работе приложения? \nНапишите разработчику в Telegram</string>
    <string name="my_tg_text_button_name">Вопросы и предложения?</string>
    <string name="agz_button_name">Хотите узнать больше о приложении?</string>
    <string name="agz_bot_telegram_button_name">Telegram-бот</string>
    <string name="agz_bot_telegram_button">Нажмите, чтобы перейти к официальному боту с расписанием</string>
    <string name="theme_change_lable">Выбор темы</string>
    <string name="add_group_button">Добавить группу</string>
    <string name="change_group_lable">Выбор группы</string>
    <string name="setting_lable">Настройки</string>
    <string name="January">Января</string>
    <string name="February">Февраля</string>
    <string name="March">Марта</string>
    <string name="April">Апреля</string>
    <string name="May">Мая</string>
    <string name="June">Июня</string>
    <string name="July">Июля</string>
    <string name="August">Августа</string>
    <string name="September">Сентября</string>
    <string name="October">Октября</string>
    <string name="November">Ноября</string>
    <string name="December">Декабря</string>
    <string name="set_date">Выберите дату</string>
    <string name="break_45">Перерыв на обед - 45 минут</string>
    <string name="break_15">Перерыв 15 минут</string>
    <string name="no_school">В этот день занятий нет</string>
    <string name="pair">пара</string>
    <string name="pairs">пары</string>
    <string name="group_number">"Группа № "</string>
    <string name="department_number">"Кафедра № "</string>
    <string name="type_subject_pz">Практическое занятие</string>
    <string name="type_subject_practic">Практика</string>
    <string name="type_subject_credit_with_an_assessment">Зачет с оценкой</string>
    <string name="type_subject_control_work">Контрольная работа</string>
    <string name="type_subject_coursework">Курсовая работа</string>
    <string name="type_subject_lecture">Лекция</string>
    <string name="type_subject_laboratory_work">Лабораторная работа</string>
    <string name="type_subject_seminar">Семинар</string>
    <string name="type_subject_SRPP">СРПП</string>
    <string name="type_subject_exam">Экзамен</string>
    <string name="type_subject_group_consultation">Групповая консультация</string>
    <string name="type_subject_group_lesson">Групповое занятие</string>
    <string name="type_subject_test">Зачет</string>
    <string name="type_subject_lesson">Занятие</string>
    <string name="theme_system">Системная</string>
    <string name="theme_night">Темная</string>
    <string name="theme_light">Светлая</string>
    <string name="contacts_lable">Контакты</string>
    <string name="exams_lable">Экзамены</string>
    <string name="group_not_selected_text">Группа не выбрана</string>
    <string name="first_day">пн</string>
    <string name="second_day">вт</string>
    <string name="third_day">ср</string>
    <string name="fourth_day">чт</string>
    <string name="fifth_day">пт</string>
    <string name="sixth_day">сб</string>
    <string name="network_error_message">Ошибка подключения</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aud_workload_button_name">Загрузка аудиторий</string>
    <string name="aud_workload_button">Просмотр загруженности аудиторий в учебных корпусах</string>
    <string name="caf_time_table_button_name">Расписание кафедры</string>
    <string name="caf_time_table_button">Просмотр расписания кафедры для всех преподавателей</string>
    <string name="add_teacher_button">Выбрать преподавателя</string>
    <string name="workload_text">Нагрузка</string>
    <string name="workload_info_text">Просмотр нагрузки преподавателей и групп</string>


</resources>